[gd_scene load_steps=2 format=3 uid="uid://eq5qkhjwjo73"]

[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="1_114uj"]

[node name="HitboxComponent" type="Area3D"]
collision_layer = 8
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource("1_114uj")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
